# rust-neon-template

./: .env.example  .gitignore  Cargo.toml  README.md
.github/workflows/: rust.yml
src/: error.rs  lib.rs  main.rs  response.rs
src/config/: client.rs  mod.rs
src/handlers/: auth.rs  health.rs  notes.rs
src/models/: auth.rs  user.rs
src/routes/: auth.rs  health.rs  mod.rs
src/services/: auth.rs
tests/: api.rs
