[package]
name = "rust-neon-template"
version = "0.1.0"
edition = "2024"

[dependencies]
reqwest = { version = "0.13", default-features = false, features = ["json", "rustls"] }
tokio = { version = "1.52", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
axum = { version = "0.8", features = ["macros"] }
dotenvy = "0.15"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
utility-types = "0.0.4"
url = "2"
urlencoding = "2"
tower-http = { version = "0.6", features = ["trace"] }
base64 = "0.22"
